# csc621-821-sp2015

./: .gitignore  CMakeLists.txt  README.md  wind.files  wind.includes
3DObject/: 3D.cxx  CMakeLists.txt  itkVtkImageConvert.h
CineViewerExample/: CMakeLists.txt  CineViewer.cxx  CineViewer.h  CineViewerExample.cxx
Segmentor_Test/src/: CMakeLists.txt  Segmentor.cxx  test.cxx
connectedcomponent/source/: CMakeLists.txt  ScalarConnectedComponent.cxx  test.cxx
include/: BoxWidgetCallback.h  Common.h  DICOMSeries.h  Loader.h  MainWindow.h  Quantifier.h  RegWindow.h  Register.h  Registrant.h  RegistrationInterfaceCommand.h  RegistrationIterationCommand.h  SegWindow.h  Segment.h  Segmentor.h  Stage.h  Visualize.h  VisualizeImageSource.h  Window.h  Window1.h  mainWindow.h  segmentor.h
source/: CMakeLists.txt  DICOMSeries.cpp  Loader.cpp  MainWindow.cpp  MainWindow.ui  Quantifier.cpp  RegWindow.cpp  RegWindow.ui  Register.cpp  Register.ui  Registrant.cpp  SegWindow.cpp  SegWindow.ui  Segment.cpp  Segment.ui  Segmentor.cpp  Visualize.cpp  VisualizeImageSource.cpp  VisualizeMain.cpp  WindGrp.cpp  Window.cpp  Window.ui  Window1.cpp  Window1.ui  mainWindow.cpp  mainWindow.ui
src/: CMakeLists.txt  WindRegistration.cxx  WindRegistrationPyramid.cxx
