cmake_minimum_required(VERSION 2.6)
 
PROJECT(3D CXX)
 
FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})
#ImageToVTKImageFilter should be included in ITK build
 
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})
 
ADD_EXECUTABLE(3D 3D.cxx)
 
TARGET_LINK_LIBRARIES(3D ${ITK_LIBRARIES})
TARGET_LINK_LIBRARIES(3D ${VTK_LIBRARIES})